src/objects/nxtdev__PaymentGateway__c.object
<CustomObject>
    <fields>
        <fullName>MerchantId__c</fullName>
        <label>Merchant ID</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>MerchantReference__c</fullName>
        <label>Merchant Reference</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TestMode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Test Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionSecurityKey__c</fullName>
        <description>Transaction Security Key used by CyberSource</description>
        <inlineHelpText>Transaction Security Key used by CyberSource</inlineHelpText>
        <label>Transaction Security Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>